src/objects/Tour_Package__c.object
<CustomObject>
    <fields>
        <fullName>Minimum_Pax__c</fullName>
        <description>Minimum number of signups before Tour can be run</description>
        <label>Minimum Pax</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price Per Pax</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Star</fullName>
                </value>
                <value>
                    <fullName>2 Stars</fullName>
                </value>
                <value>
                    <fullName>3 Stars</fullName>
                </value>
                <value>
                    <fullName>4 Stars</fullName>
                </value>
                <value>
                    <fullName>5 Stars</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tour Package</label>
    <nameField>
        <label>Tour Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tour Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>